--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "websocket": "^1.0.33"
   },
   "scripts": {
     "start": "react-scripts start",
