--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.7.1",
     "bcryptjs": "^2.4.3",
     "node-sass": "^4.14.1",
+    "noty": "^3.2.0-beta",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
